refactor: static import로 수정